[project]
name = "riftline-gm"
version = "0.1.0"
description = "A small general-purpose Telegram game-master bot for tabletop RPGs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Open Source Contributors" }]
dependencies = [
  "httpx==0.28.1",
  "python-telegram-bot==22.7",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.1",
  "pytest-asyncio==1.3.0",
]

[project.scripts]
riftline-gm = "riftline_gm.__main__:main"
riftline_gm = "riftline_gm.__main__:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]
